--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         </dependencies>
     </dependencyManagement>
 
+    //added line 37-41
     <dependencies>
         <dependency>
             <groupId>com.auth0</groupId>
